dashboard admin stock

--- a/dashaboard_admin_productos.html
+++ b/dashaboard_admin_productos.html
@@ -26,7 +26,7 @@
         </div>
         
         <div class="dash">
-        <a class="ins" href=""><p class="t1">STOCK</p></a>
+        <a class="ins" href="dashoboard_admin_stock.html"><p class="t1">STOCK</p></a>
         <div class="linea"></div>
         </div>
         <div class="dash">
