--- a/dashboard historias clinicas admin.html
+++ b/dashboard historias clinicas admin.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="dash">
-<a class="ins" href=""><p class="t1">STOCK</p></a>
+<a class="ins" href="dashoboard_admin_stock.html"><p class="t1">STOCK</p></a>
 <div class="linea"></div>
 </div>
 <div class="dash">
@@ -47,7 +47,7 @@
   <div class="linea"></div>
 </div>
 <div class="dash">
-  <a class="ins" href=""><p class="t1">HISTORIAS CLINICAS</p></a>
+  <a class="ins" href="dashboard historias clinicas admin.html"><p class="t1">HISTORIAS CLINICAS</p></a>
   <div class="linea"></div>
 </div>
 <div class="dash">
