--- a/dashoboard_admin_stock.html
+++ b/dashoboard_admin_stock.html
@@ -76,9 +76,13 @@
               <form class="cont3" action="" method="post">
               <div class="menumin">
                 <nav class="modify-buttons">
-                <input class="create" type="submit" value="CREAR">
-                <input class="search" type="button" value="BUSCAR">
-                <input class="resetear" type="reset" value="RESETEAR">
+                    <nav class="modify-buttons">
+                        <input class="create" type="button" value="STOCK">
+                        <input class="search" type="button" value="MARCA">
+                        <input class="categoria" type="button" value="CATEGORIA">
+                        <input class="vencimiento" type="button" value="VENCIMIENTO">
+                        </nav>  
+                    
                 </nav>
               </div>
               <div class="container_form_external">
