paginas de error

--- a/dashboar_caja_registro.html
+++ b/dashboar_caja_registro.html
@@ -29,19 +29,19 @@
         <div class="linea"></div>
         </div>
         <div class="dash">
-            <a class="ins" href=""><p class="t1">STOCK</p></a>
+            <a class="ins" href="dashoboard_admin_stock.html"><p class="t1">STOCK</p></a>
             <div class="linea"></div>
           </div>
           <div class="dash">
-            <a class="ins" href=""><p class="t1">VENTAS</p></a>
+            <a class="ins" href="error400.html"><p class="t1">VENTAS</p></a>
             <div class="linea"></div>
           </div>
         <div class="dash">
-          <a class="ins" href=""><p class="t1">AGENDA</p></a>
+          <a class="ins" href="error400.html"><p class="t1">AGENDA</p></a>
           <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href=""><p class="t1">PRODUCTOS</p></a>
+          <a class="ins" href="dashaboard_admin_productos.html"><p class="t1">PRODUCTOS</p></a>
           <div class="linea"></div>
       
         </div>
