--- a/dashoboard_admin_stock.html
+++ b/dashoboard_admin_stock.html
@@ -30,11 +30,11 @@
         <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href=""><p class="t1">VENTAS</p></a>
+          <a class="ins" href="error400.html"><p class="t1">VENTAS</p></a>
           <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href=""><p class="t1">AGENDA</p></a>
+          <a class="ins" href="error400.html"><p class="t1">AGENDA</p></a>
           <div class="linea"></div>
         </div>
         <div class="dash">
@@ -42,7 +42,7 @@
           <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href=""><p class="t1">ESTADISTICAS</p></a>
+          <a class="ins" href="error400.html"><p class="t1">ESTADISTICAS</p></a>
           <div class="linea"></div>
         </div>
         <div class="dash">
@@ -50,7 +50,7 @@
           <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href=""><p class="t1">GESTION DE OPERARIOS</p> </a>
+          <a class="ins" href="error400.html"><p class="t1">GESTION DE OPERARIOS</p> </a>
          
           <div class="linea"></div>
         </div>
