--- a/dashaboard_admin_productos.html
+++ b/dashaboard_admin_productos.html
@@ -30,19 +30,19 @@
         <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href=""><p class="t1">VENTAS</p></a>
+          <a class="ins" href="error400.html"><p class="t1">VENTAS</p></a>
           <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href=""><p class="t1">AGENDA</p></a>
+          <a class="ins" href="error400.html"><p class="t1">AGENDA</p></a>
           <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href=""><p class="t1">PRODUCTOS</p></a>
+          <a class="ins" href="error400.html><p class="t1">PRODUCTOS</p></a>
           <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href=""><p class="t1">ESTADISTICAS</p></a>
+          <a class="ins" href="error400.html"><p class="t1">ESTADISTICAS</p></a>
           <div class="linea"></div>
         </div>
         <div class="dash">
@@ -50,7 +50,7 @@
           <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href=""><p class="t1">GESTION DE OPERARIOS</p> </a>
+          <a class="ins" href="error400.html"><p class="t1">GESTION DE OPERARIOS</p> </a>
          
           <div class="linea"></div>
         </div>
