--- a/dashboard historias clinicas admin.html
+++ b/dashboard historias clinicas admin.html
@@ -31,11 +31,11 @@
 <div class="linea"></div>
 </div>
 <div class="dash">
-  <a class="ins" href=""><p class="t1">VENTAS</p></a>
+  <a class="ins" href="error400.html"><p class="t1">VENTAS</p></a>
   <div class="linea"></div>
 </div>
 <div class="dash">
-  <a class="ins" href=""><p class="t1">AGENDA</p></a>
+  <a class="ins" href="error400.html"><p class="t1">AGENDA</p></a>
   <div class="linea"></div>
 </div>
 <div class="dash">
@@ -43,7 +43,7 @@
   <div class="linea"></div>
 </div>
 <div class="dash">
-  <a class="ins" href=""><p class="t1">ESTADISTICAS</p></a>
+  <a class="ins" href="error400.html"><p class="t1">ESTADISTICAS</p></a>
   <div class="linea"></div>
 </div>
 <div class="dash">
@@ -51,7 +51,7 @@
   <div class="linea"></div>
 </div>
 <div class="dash">
-  <a class="ins" href=""><p class="t1">GESTION DE OPERARIOS</p> </a>
+  <a class="ins" href="error400.html"><p class="t1">GESTION DE OPERARIOS</p> </a>
  
   <div class="linea"></div>
 </div>
