--- a/dashaboard_admin_productos.html
+++ b/dashaboard_admin_productos.html
@@ -38,9 +38,10 @@
           <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href="error400.html><p class="t1">PRODUCTOS</p></a>
+          <a class="ins" href="error400.html"><p class="t1">PRODUCTOS</p></a>
           <div class="linea"></div>
         </div>
+        
         <div class="dash">
           <a class="ins" href="error400.html"><p class="t1">ESTADISTICAS</p></a>
           <div class="linea"></div>
