base de datos y resposive

--- a/dashboard historias clinicas admin.html
+++ b/dashboard historias clinicas admin.html
@@ -80,7 +80,7 @@
 </div>
 </header>
 <div class="cont3">
-  <form class="cont3" action="" method="post">
+  <form class="cont3" action="ds.php" method="post">
   <div class="menumin">
     <nav class="modify-buttons">
     <input class="create" type="submit" value="CREAR">
