--- a/info.html
+++ b/info.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="contentheader">
-<header class="logo">
+<a class="logo" href="index.html">
+<img class="mencion" src="img/best animal2-01 (1).png" alt="logo">
 
 
-
-</header>
+</a>
 
 
     </div>
