--- a/login.html
+++ b/login.html
@@ -18,9 +18,9 @@
     </header>
     <div class="ins">
        
-        <form action="" method="post"></form>
+        
 <div class="cont2">
-  <form class="formu" action="dashaboard_admin_productos.html" method="get">
+  <form class="formu" action="ds.php" method="post">
     <p class="sesion">INICIAR SESION</p>
 
     <input class="correo" type="email" name="correo" id="correo" placeholder="ej:example@gmail.com" required>
@@ -40,6 +40,7 @@
 <div class="tulia">
     <p class="endtext">2022 Clínica Veterinaria Best Animals, todos los derechos reservados</p>
 </div>
+
 
 </footer>
 
