--- a/registrarse.html
+++ b/registrarse.html
@@ -24,7 +24,7 @@
 </div>
 <div class="contenido2">
 <h1 class="register">REGISTRARSE</h1>
-<form class="formulario"  action=""  method="post">
+<form class="formulario"  action="registrarse.php"  method="post">
 <input class="reg" name="nombre_registro" type="text" placeholder="Nombre:" required>
 
 <input class="reg" name="apellidos_registro" type="text" placeholder="Apellidos:" required>
@@ -36,7 +36,7 @@
 <input class="reg" name="ciudad_registro" type="text" placeholder="Ciudad:" required>
 <input class="reg" name="email_registro" type="email" placeholder="Email:" required>
     
-<input class="reg" name="password_registro" type="password" placeholder="Ingrese su contraseña:" required>
+
 <input class="reg1"  type="submit" value="FINALIZADO">
 </form>
 </div>
