--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
        
         
 <div class="cont2">
-  <form class="formu" action="ds.php" method="post">
+  <form class="formu" action="" method="post">
     <p class="sesion">INICIAR SESION</p>
 
     <input class="correo" type="email" name="correo" id="correo" placeholder="ej:example@gmail.com" required>
@@ -29,8 +29,8 @@
     <br>
     <input class="boton" id="iniciar sesion"  type="submit" value="iniciar sesion">
 </form>
-    <p>¿No tiene cuenta? <a class="regist" href="registrarse.html">registrese aqui</a></p>
-<p >¿olvido su contraseña?<a class="coloru" href="">haga click aqui para recuperarla</a></p>
+    <p class="not_account">¿No tiene cuenta? <a class="regist" href="registrarse.html">registrese aqui</a></p>
+<p class="not_account" >¿olvido su contraseña?<a class="coloru" href="">haga click aqui para recuperarla</a></p>
 
 
 </div>
