--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
        
         
 <div class="cont2">
-  <form class="formu" action="" method="post">
+  <form class="formu" action="dashaboard_admin_productos.html" method="get">
     <p class="sesion">INICIAR SESION</p>
 
     <input class="correo" type="email" name="correo" id="correo" placeholder="ej:example@gmail.com" required>
