admin caja responsive

--- a/dashboar_caja_registro.html
+++ b/dashboar_caja_registro.html
@@ -71,7 +71,7 @@
                 <form class="cont3" action="" method="get">
                 <div class="menumin">
                   <nav class="modify-buttons">
-                    <input class="create" type="submit" value="Generar Venta">
+                    <input class="create" type="submit" value="Generar">
                   
                     </nav>  
                 
