new fur pages responsive

--- a/servicios.html
+++ b/servicios.html
@@ -49,13 +49,13 @@
     </div>
     <div class="icono">
         <div class="icono_general">
-            <a class="ceta" href=""><img class="size_images" src="img/Boton_avion-removebg-preview.png" alt="avion"></a><br>
+            <a class="ceta" href="viaje.html"><img class="size_images" src="img/Boton_avion-removebg-preview.png" alt="avion"></a><br>
            
-        <a class="letter" href="">CERTIFICADOS DE VIAJE</a>
+        <a class="letter" href="viaje.html">CERTIFICADOS DE VIAJE</a>
         </div>
         <div class="icono_general">
-            <a class="ceta" href=""><img class="size_images" src="img/Boton_Hospedaje-removebg-preview.png" alt="clinica"></a><br>
-        <a class="letter" href="">HOSPEDAJE</a>
+            <a class="ceta" href="guarderia.html"><img class="size_images" src="img/Boton_Hospedaje-removebg-preview.png" alt="clinica"></a><br>
+        <a class="letter" href="guarderia.html">HOSPEDAJE</a>
         </div>
 
     </div>
