--- a/registrarse.html
+++ b/registrarse.html
@@ -35,7 +35,7 @@
     
 <input class="reg" name="ciudad_registro" type="text" placeholder="Ciudad:" required>
 <input class="reg" name="email_registro" type="email" placeholder="Email:" required>
-    
+<input class="reg" name="password_registro" type="password" placeholder="Contraseña:" required>
 
 <input class="reg1"  type="submit" value="FINALIZADO">
 </form>
