--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styleremastered.css">
+    <link rel="stylesheet" href="CSS/styleremastered.css?v2.0">
     <title>Landing page</title>
 </head>
 <body>
@@ -12,8 +12,8 @@
      
 <nav class="contenedor_logo"> <img class="perro" src="img/best animal2-01 (1).png" alt="logo"></nav>
 
-<nav class="main_container_botones"> <div class="contedor_botones"> <a class="put_botones" href=""><img class="tamaño" src="img/inicio buttton.png" alt="inicio">   </a>
-<a class="indices" href="">INICIO</a></div>
+<nav class="main_container_botones"> <div class="contedor_botones"> <a class="put_botones" href="conocenos.html"><img class="tamaño" src="img/inicio buttton.png" alt="inicio">   </a>
+<a class="indices" href="conocenos.html">INICIO</a></div>
 <div class="contedor_botones">
 <a class="put_botones" href="servicios.html"> <img class="tamaño" src="img/boton 2.jpg" alt="servicios"></a>
 <a class="indices" href="servicios.html">SERVICIOS</a>
