--- a/login.html
+++ b/login.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style2.css">
     <title>iniciar sesion</title>
-    
+    <link rel="stylesheet" type="text/css" href="css/style2.css?2.0" media="all" >
+    <link rel="stylesheet" href="login_roles.php" />
 </head>
 
 <body>
