--- a/tienda.html
+++ b/tienda.html
@@ -29,16 +29,58 @@
         <button class="boton-4"  type="submit"><img class="lupa" src="img/lupa-removebg-preview.png" alt="buscar"></button>
       </form>
       </div>
-<div class="publicity_container">     </div>
+<div class="publicity_container"><ul class="lista">
+<li><a class="tele" href="">productos</a>  </li>
+<ul class="lista1">
+<li class="mini-container"><a class="list" href="">ALIMENTO</a></li>
+<li class="mini-container"><a class="list"href="">IMPLEMENTOS</a></li>
+<li class="mini-container"><a class="list" href="">ASEO</a></li>
+</ul>
+
+</ul>    </div>
 <div class="carrito_container "><a class="links" href=""> <img class="bi" src="img/carro-removebg-preview.png" alt="compras"></a></div>
 </div>
 
 </nav>
 
     </header>
+    <div class="space">Te recomendamos</div>
+    <div class="container-cards">
+<div class="put-button">
+<button class="botoncito-izq"><i class="bi bi-caret-left-fill"></i></button>
+
+</div>
+<div class="put-cards">
+<div class="slider">
+<div class="cards"></div>
+<div class="cards"></div>
+<div class="cards"></div>
+<div class="cards"></div>
+<div class="cards"></div>
+<div class="cards">holiiiiiii</div>
+<div class="cards"></div>
+<div class="cards"></div>
+<div class="cards"></div>
+<div class="cards">a</div>
+<div class="cards"></div>
+<div class="cards"></div>
+<div class="cards"></div>
+<div class="cards"></div>
+<div class="cards">a</div>
+<div class="cards"></div>
+<div class="cards"></div>
+<div class="cards"></div>
+</div>
+
+
+</div>
+<div class="put-button">
+    <button class="botoncito-derecho"><i class="bi bi-caret-right-fill"></i></button>
+</div>
+    </div>
     
 
-
+<script src="slider.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
