--- a/dashaboard_admin_productos.html
+++ b/dashaboard_admin_productos.html
@@ -79,8 +79,8 @@
             <div class="cont3">
 <div class="menumin">
   <nav class="modify-buttons">
-    <input class="create" type="button" value="STOCK">
-    <input class="search" type="button" value="PROVEEDORES">
+    <input class="create" type="button" value="CREAR">
+    <input class="search" type="button" value="BUSCAR">
   
     </nav>  
 
