--- a/dashboard historias clinicas admin.html
+++ b/dashboard historias clinicas admin.html
@@ -94,7 +94,7 @@
       <header class="contform">
         <img class="photob" src="img/best animal2-01 (1).png"  alt="">
         <p class="title">CLINICA VETERINARIA <br>
-          BEST ANIMALS <br>  historia clinica <br> <br>  DATOS DEL PACIENTE</p>
+          BEST ANIMALS <br>  historia clinica <br> DATOS DEL PACIENTE</p>
           
 
       </header>
