--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styleremastered.css?v2.0">
+    <link rel="stylesheet" href="CSS/styleremastered.css?v2.1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <title>Landing page</title>
 </head>
 <body>
@@ -20,8 +21,8 @@
 
 </div>
 <div class="contedor_botones">
-    <a class="put_botones" href="tienda.html"><img class="tamaño" src="img/boton 3.png" alt="services"></a>
-    <a class="indices" href="tienda.html">TIENDA ONLINE</a>
+    <a class="put_botones" href="tienda.php?v=1.0"><img class="tamaño" src="img/boton 3.png" alt="services"></a>
+    <a class="indices" href="tienda.php?v=1.0">TIENDA ONLINE</a>
 
 </div>
 <div class="contedor_botones">
@@ -41,7 +42,7 @@
 <div class="titulo">CLINICA VETERINARIA <br>
     BEST ANIMALS</div>
 <div class="segunda_mitad">
-<a class="boton_mascotas" href="info.html"><p id="masc">MASCOTAS -></p>  </a> 
+<a class="boton_mascotas" href="info.html"><p id="masc">MASCOTAS <i class="bi bi-arrow-right"></i></p>  </a> 
 
 
 </div>
