--- a/dashaboard_admin_productos.html
+++ b/dashaboard_admin_productos.html
@@ -9,6 +9,7 @@
     <title>dashboard base</title>
 </head>
 <body>
+
     <div class="maincontainer">
     
         <div class="cont1">
@@ -27,7 +28,7 @@
         </div>
         
         <div class="dash">
-        <a class="ins" href="dashoboard_admin_stock.html"><p class="t1">STOCK</p></a>
+        <a class="ins" href="dashoboard_admin_stock.php"><p class="t1">STOCK</p></a>
         <div class="linea"></div>
         </div>
         <div class="dash">
@@ -78,6 +79,7 @@
             </header>
             <div class="cont3">
 <div class="menumin">
+ 
   <nav class="modify-buttons">
     <input class="create" type="button" value="CREAR">
     <input class="search" type="button" value="BUSCAR">
