--- a/dashboard historias clinicas admin.html
+++ b/dashboard historias clinicas admin.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="dash">
-<a class="ins" href="dashoboard_admin_stock.html"><p class="t1">STOCK</p></a>
+<a class="ins" href="dashoboard_admin_stock.php"><p class="t1">STOCK</p></a>
 <div class="linea"></div>
 </div>
 <div class="dash">
