--- a/dashboar_caja_registro.html
+++ b/dashboar_caja_registro.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style15.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>caja</title>
 </head>
 <body>
@@ -29,7 +30,7 @@
         <div class="linea"></div>
         </div>
         <div class="dash">
-            <a class="ins" href="dashoboard_admin_stock.html"><p class="t1">STOCK</p></a>
+            <a class="ins" href="dashoboard_admin_stock.php"><p class="t1">STOCK</p></a>
             <div class="linea"></div>
           </div>
           <div class="dash">
@@ -46,7 +47,7 @@
       
         </div>
         <div class="dash">
-            <a class="ins" href="dashaboard_admin_productos.html"><p class="t1"><-ATRAS</p></a>
+            <a class="ins" href="dashaboard_admin_productos.html"><p class="t1"><i class="bi bi-arrow-left"></i>ATRAS</p></a>
             
           </div>
         </div>
