--- a/dashaboard_admin_productos.html
+++ b/dashaboard_admin_productos.html
@@ -53,7 +53,7 @@
           <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href="error400.html"><p class="t1">GESTION DE OPERARIOS</p> </a>
+          <a class="ins" href="gestion_usuario_empleados.php"><p class="t1">GESTION DE OPERARIOS</p> </a>
          
           <div class="linea"></div>
         </div>
