--- a/alert_sucefully.html
+++ b/alert_sucefully.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/style20.css">
 </head>
 <body>
-    <div class="container-alerta" id="disparador">
+    <div class="container-alerta" id="disparadorsote">
     
         <div class="alerta">
           <div class="contenido-alerta">
