--- a/dashaboard_admin_productos.html
+++ b/dashaboard_admin_productos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="CSS/style6.css?v=2">
+    <link rel="stylesheet" href="CSS/style6.css?v=1.11">
     <title>dashboard base</title>
 </head>
 <body>
@@ -49,7 +49,7 @@
           <div class="linea"></div>
         </div>
         <div class="dash">
-          <a class="ins" href="dashboard historias clinicas admin.html"><p class="t1">HISTORIAS CLINICAS</p></a>
+          <a class="ins" href="dashboard historias clinicas admin.php"><p class="t1">HISTORIAS CLINICAS</p></a>
           <div class="linea"></div>
         </div>
         <div class="dash">
