--- a/conocenos.html
+++ b/conocenos.html
@@ -60,7 +60,7 @@
 </div>
 <div class="comms-container">
 <div class="comms-content">
-comunicate! <br> TE RESPONDEREMOS EN MINUTOS
+comunicate! <br> TE RESPONDEMOS EN MINUTOS
 
 </div>
 
