design update registro

--- a/registrarse.html
+++ b/registrarse.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registro</title>
-    <link rel="stylesheet" href="CSS/style3.css">
+    <link rel="stylesheet" href="CSS/style3.css?v=1.1">
 </head>
 <body>
     <div class="maincointainer1">
 <div class="contenido1"><header class="logo">
-<a  href="index.html"><img class="logeishon" src="img/best animal2-01 (1).png" alt="logo">
+<a class="fix" href="index.html"><img class="logeishon" src="img/best animal2-01 (1).png" alt="logo">
     
 
 
