enlaces a redes sociales

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <footer class="complete">
 <div class="almacenar_redes">
-<a class="put_red" href=""> <img src="img/maybe.png" class="cti" alt="instagram"></a>
-<a class="put_red" href=""><img src="img/facebook-xxl.png" class="cti1" alt="facebook"></a>
+<a class="put_red" href="https://www.instagram.com/bestanimalsvet"> <img src="img/maybe.png" class="cti" alt="instagram"></a>
+<a class="put_red" href="https://www.facebook.com/bestanimalsvet/"><img src="img/facebook-xxl.png" class="cti1" alt="facebook"></a>
 <a class="put_red" href=""><img src="img/whatsapp-xxl.png" class="cti1" alt="whatsapp"></a>
 
 </div>
