--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styleremastered.css?v2.26">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+     <link rel="shortcut icon" href="{{ asset('img/best animal2-01 (1).png') }}" type="image/x-icon">
     <title>Landing page</title>
 </head>
 <body>
